templates/binaryvision-tlo_template.yaml
---
# Source: binaryvision-tlo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-binaryvision-tlo
  labels:
    helm.sh/chart: binaryvision-tlo-0.0.4
    app.kubernetes.io/name: binaryvision-tlo
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: binaryvision-tlo
    app.kubernetes.io/instance: release-name
---
# Source: binaryvision-tlo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-binaryvision-tlo
  labels:
    helm.sh/chart: binaryvision-tlo-0.0.4
    app.kubernetes.io/name: binaryvision-tlo
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: binaryvision-tlo
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: binaryvision-tlo
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-binaryvision-tlo
      securityContext:
        {}
      containers:
        - name: binaryvision-tlo
          securityContext:
            {}
          image: "phntom/binaryvision-tlo-static:0.0.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /bv/
              port: http
          readinessProbe:
            httpGet:
              path: /bv/
              port: http
          resources:
            {}
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-production
---
# Source: binaryvision-tlo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-binaryvision-tlo
  labels:
    helm.sh/chart: binaryvision-tlo-0.0.4
    app.kubernetes.io/name: binaryvision-tlo
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.kubernetes.io/dns: dns_cf
    acme.kubernetes.io/enable: "true"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/app-root: /bv/
spec:
  tls:
    - hosts:
        - "tlo.binaryvision.co.il"
        - "tlo.binaryvision.org.il"
        - "tlo.minthe.kix.co.il"
        - "tlo.nix.co.il"
      secretName: binaryvision-tlo-tls
  rules:
    - host: "tlo.binaryvision.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-tlo
              servicePort: 80
    - host: "tlo.binaryvision.org.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-tlo
              servicePort: 80
    - host: "tlo.minthe.kix.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-tlo
              servicePort: 80
    - host: "tlo.nix.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-tlo
              servicePort: 80
---
# Source: binaryvision-tlo/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-binaryvision-tlo-test-connection"
  labels:
    helm.sh/chart: binaryvision-tlo-0.0.4
    app.kubernetes.io/name: binaryvision-tlo
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-binaryvision-tlo:80']
  restartPolicy: Never
